portal/Kuber_stuff/yaml_services_final.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: INSTANCE
  namespace: NAMESPACE
spec:
  replicas: REPLICAS-MIN
  template:
    metadata:
      name: INSTANCE
      namespace: NAMESPACE
      labels:
        app: INSTANCE
    spec:
      containers:
      - name: INSTANCE
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
            - name: image-store
              mountPath: INSTANCE         
        resources:
         requests:
           cpu: 100m
         limits:
           cpu: "500m"
      volumes:
      - name: image-store
        persistentVolumeClaim:
          claimName: INSTANCE-pvc
      imagePullSecrets:
      - name: registry-ENVIROMENT
---
apiVersion: v1
kind: Service
metadata:
  name: INSTANCE-svc
  namespace: NAMESPACE
spec:
  ports:
  - name: "www"
    port: 80
    targetPort: 80
  selector:
    app: INSTANCE
  type: NodePort
