portal/Kuber_stuff/ingress_template_base.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.org/rewrites:
      serviceName=instance2-svc rewrite=/
      
  name: namespace-ingress
  namespace: namespace  
spec:
  tls:
  - hosts:
    - namespace.environment.fqdn
    secretName: namespace-secret
  rules:
  - host: namespace.environment.fqdn
